--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -52,7 +52,6 @@
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
                         <h1 class="nav-link" style="color:rgb(255, 255, 255)" href="/">Discover </h1>
-                        <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                         <!-- Nav -->
                         <div class="collapse navbar-collapse" id="dorneNav">
@@ -63,42 +62,17 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <!-- <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="/">Home</a>
-                                        <a class="dropdown-item" href="explorer">Explore</a>
-                                        <a class="dropdown-item" href="listing">Listing</a>
-                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                        <a class="dropdown-item" href="contact">Contact</a>
-                                    </div>
-                                </li> -->
                                 <li class="nav-item dropdown active">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <!-- <a class="dropdown-item" href="/">Home</a> -->
-                                        <!-- <a class="dropdown-item" href="explore">Explore</a> -->
                                         <a class="dropdown-item" href="listing">Listing</a>
                                         <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                        <!-- <a class="dropdown-item" href="contact">Contact</a> -->
                                     </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact">Contact</a>
                                 </li>
                             </ul>
-                            <!-- Search btn -->
-                            <div class="dorne-search-btn">
-                                <!-- <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a> -->
-                            </div>
-                            <!-- Signin btn -->
-                            <!-- <div class="dorne-signin-btn">
-                                <a href="#">Sign in  or Register</a>
-                            </div> -->
-                            <!-- Add listings btn -->
-                            <!-- <div class="dorne-add-listings-btn">
-                                <a href="#" class="btn dorne-btn">+ Add Listings</a>
-                            </div> -->
                         </div>
                     </nav>
                 </div>
@@ -114,9 +88,6 @@
                 <div class="col-12">
                     <div class="breadcumb-content">
                         <div class="map-ratings-review-area d-flex">
-                            <!-- <a href="#lomap" class="d-flex align-items-center justify-content-center"><img src="img/core-img/map.png" alt=""></a> -->
-                            <!-- <a href="#">8.7</a> -->
-                            <!-- <a href="#">Write a review</a> -->
                         </div>
                     </div>
                 </div>
@@ -141,9 +112,7 @@
                         <div class="single-listing-nav">
                             <nav>
                                 <ul id="listingNav">
-                                    <li class="active"><a href="#overview">Overview</a></li>
-                                    <!-- <li><a href="#menu">Menu</a></li>
-                                    <li><a href="#review">Reviews</a></li> -->
+                                    <li id="overviewheader" class="active"><a href="#overview">Overview</a></li>
                                     <li><a id="location" href="#lomap">Location on map</a></li>
                                 </ul>
                             </nav>
@@ -151,139 +120,7 @@
 
                         <div class="overview-content mt-50">
                             <p id="overview"></p>
-                            <div class="row mt-5">
-                                <div class="col-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Accepts Credit Cards</span>
-                                    </label>
-                                </div>
-                                <div class="col-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Accepts Cash</span>
-                                    </label>
-                                </div>
-                                <div class="col-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Wireless Internet</span>
-                                    </label>
-                                </div>
-                                <div class="col-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Parking</span>
-                                    </label>
-                                </div>
-                            </div>
                         </div>
-
-                        <!-- <div class="listing-menu-area mt-100" id="menu"> -->
-                        <!-- <h4>Menu</h4> -->
-                        <!-- Single Listing Menu -->
-                        <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
-                        <!-- Listing Menu Title -->
-                        <!-- <div class="listing-menu-title"> -->
-                        <!-- <h6>Classic Burger</h6> -->
-                        <!-- <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p> -->
-                        <!-- </div> -->
-                        <!-- Listing Menu Price -->
-                        <!-- <div class="listing-menu-price">
-                                    <h6>$9,90</h6>
-                                </div>
-                            </div> -->
-                        <!-- Single Listing Menu -->
-                        <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
-                        <!-- Listing Menu Title -->
-                        <!-- <div class="listing-menu-title">
-                                    <h6>House Special Burger</h6>
-                                    <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p>
-                                </div> -->
-                        <!-- Listing Menu Price -->
-                        <!-- <div class="listing-menu-price">
-                                    <h6>$9,90</h6>
-                                </div>
-                            </div> -->
-                        <!-- Single Listing Menu -->
-                        <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
-                        <!-- Listing Menu Title -->
-                        <!-- <div class="listing-menu-title">
-                                    <h6>Classic Burger</h6>
-                                    <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p>
-                                </div> -->
-                        <!-- Listing Menu Price -->
-                        <!-- <div class="listing-menu-price">
-                                    <h6>$9,90</h6>
-                                </div>
-                            </div> -->
-                        <!-- Single Listing Menu -->
-                        <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
-                        <!-- Listing Menu Title -->
-                        <!-- <div class="listing-menu-title">
-                                    <h6>House Special Burger</h6>
-                                    <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p>
-                                </div> -->
-                        <!-- Listing Menu Price -->
-                        <!-- <div class="listing-menu-price">
-                                    <h6>$9,90</h6>
-                                </div>
-                            </div> -->
-                        <!-- <a href="#" class="btn dorne-btn mt-50">+ See The Menu</a> -->
-                        <!-- </div> -->
-
-                        <!-- <div class="listing-reviews-area mt-100" id="review">
-                            <h4>reviews</h4>
-                            <div class="single-review-area">
-                                <div class="reviewer-meta d-flex align-items-center">
-                                    <img src="img/clients-img/1.jpg" alt="">
-                                    <div class="reviewer-content">
-                                        <div class="review-title-ratings d-flex justify-content-between">
-                                            <h5>“The best Burger in town”</h5>
-                                            <div class="ratings">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                            </div>
-                                        </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac nibh sed mi ullamcorper rhoncus. Curabitur pulvinar vel augue sit amet vestibulum. Proin tempus lacus porta lorem blandit aliquam eget quis ipsum. Vivamus accumsan consequat ligula non volutpat.</p>
-                                    </div>
-                                </div>
-                                <div class="reviewer-name">
-                                    <h6>Christinne Smith</h6>
-                                    <p>12 November 2017</p>
-                                </div>
-                            </div>
-                            <div class="single-review-area">
-                                <div class="reviewer-meta d-flex align-items-center">
-                                    <img src="img/clients-img/1.jpg" alt="">
-                                    <div class="reviewer-content">
-                                        <div class="review-title-ratings d-flex justify-content-between">
-                                            <h5>“Quality ingredients”</h5>
-                                            <div class="ratings">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-fill.png" alt="">
-                                                <img src="img/clients-img/star-unfill.png" alt="">
-                                            </div>
-                                        </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac nibh sed mi ullamcorper rhoncus. Curabitur pulvinar vel augue sit amet vestibulum. Proin tempus lacus porta lorem blandit aliquam eget quis ipsum. Vivamus accumsan consequat ligula non volutpat.</p>
-                                    </div>
-                                </div>
-                                <div class="reviewer-name">
-                                    <h6>Michael Brown</h6>
-                                    <p>12 November 2017</p>
-                                </div>
-                            </div>
-                        </div> -->
-
                         <div class="location-on-map mt-50" id="lomap">
                             <h4>Location on map</h4>
                             <div class="location-map">
@@ -297,34 +134,6 @@
                 <!-- Listing Sidebar -->
                 <div class="col-12 col-md-8 col-lg-4">
                     <div class="listing-sidebar">
-
-                        <!-- Listing Verify -->
-                        <!-- <div class="listing-verify">
-                            <a href="#" class="btn dorne-btn w-100"><i class="fa fa-check pr-3"></i> Verified Listing</a>
-                        </div> -->
-
-                        <!-- Book A Table Widget -->
-                        <!-- <div class="book-a-table-widget mt-50">
-                            <h6>Book A Table</h6>
-                            <form action="#" method="get">
-                                <select class="custom-select" id="destinations">
-                                <option selected>Who will be arriving</option>
-                                <option value="1">New York</option>
-                                <option value="2">Latvia</option>
-                                <option value="3">Dhaka</option>
-                                <option value="4">Melbourne</option>
-                                <option value="5">London</option>
-                            </select>
-                                <select class="custom-select" id="catagories">
-                                <option selected>Guest 1</option>
-                                <option value="1">Guest 2</option>
-                                <option value="3">Guest 3</option>
-                                <option value="3">Guest 4</option>
-                            </select>
-                                <button type="submit" class="btn dorne-btn bg-white text-dark"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
-                            </form>
-                        </div> -->
-
                         <!-- Opening Hours Widget -->
                         <div id="open" class="opening-hours-widget mt-50">
                             <h6>Opening Hours</h6>
@@ -360,36 +169,6 @@
                             </ul>
                         </div>
 
-                        <!-- Author Widget -->
-                        <!-- <div class="author-widget mt-50 d-flex align-items-center">
-                            <img src="img/clients-img/1.jpg" alt="">
-                            <div class="authors-name">
-                                <a href="#">James Smith</a>
-                                <p>The Author</p>
-                            </div>
-                        </div> -->
-
-                        <!-- Contact Form -->
-                        <!-- <div class="contact-form contact-form-widget mt-50">
-                            <h6>Contact Business</h6>
-                            <form action="#">
-                                <div class="row">
-                                    <div class="col-12">
-                                        <input type="text" name="name" class="form-control" placeholder="Your Name">
-                                    </div>
-                                    <div class="col-12">
-                                        <input type="email" name="email" class="form-control" placeholder="Email Address">
-                                    </div>
-                                    <div class="col-12">
-                                        <textarea name="message" class="form-control" id="Message" cols="30" rows="10" placeholder="Your Message"></textarea>
-                                    </div>
-                                    <div class="col-12">
-                                        <button type="submit" class="btn dorne-btn">Send</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div> -->
-
                     </div>
                 </div>
             </div>
@@ -402,13 +181,6 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 d-md-flex align-items-center justify-content-between">
-                    <div class="footer-text">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
                     <div class="footer-social-btns">
                         <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
                         <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
