--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -52,7 +52,6 @@
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
                         <h1 class="nav-link" style="color:rgb(255, 255, 255)" href="/">Discover </h1>
-                        <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                         <!-- Nav -->
                         <div class="collapse navbar-collapse" id="dorneNav">
@@ -63,42 +62,17 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <!-- <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="/">Home</a>
-                                        <a class="dropdown-item" href="explorer">Explore</a>
-                                        <a class="dropdown-item" href="listing">Listing</a>
-                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                        <a class="dropdown-item" href="contact">Contact</a>
-                                    </div>
-                                </li> -->
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <!-- <a class="dropdown-item" href="/">Home</a> -->
-                                        <!-- <a class="dropdown-item" href="explore">Explore</a> -->
                                         <a class="dropdown-item" href="listing">Listing</a>
                                         <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                        <!-- <a class="dropdown-item" href="contact">Contact</a> -->
                                     </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact">Contact</a>
                                 </li>
                             </ul>
-                            <!-- Search btn -->
-                            <div class="dorne-search-btn">
-                                <!-- <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a> -->
-                            </div>
-                            <!-- Signin btn -->
-                            <!-- <div class="dorne-signin-btn">
-                                <a href="#">Sign in  or Register</a>
-                            </div> -->
-                            <!-- Add listings btn -->
-                            <!-- <div class="dorne-add-listings-btn">
-                                <a href="#" class="btn dorne-btn">+ Add Listings</a>
-                            </div> -->
                         </div>
                     </nav>
                 </div>
@@ -215,83 +189,9 @@
                                 <option value="SHOP">Shopping</option>
                                 <option value="ACCOMMODATION">Hotels</option>
                             </select>
-                            <!-- <div class="row mt-md-5 mt-0">
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Accepts Credit Cards</span>
-                                    </label>
-                                </div>
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Accepts Cash</span>
-                                    </label>
-                                </div>
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Wireless Internet</span>
-                                    </label>
-                                </div>
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Parking</span>
-                                    </label>
-                                </div>
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Michelin Guide</span>
-                                    </label>
-                                </div>
-                            </div> -->
                             <button id="btn" type="submit" class="btn dorne-btn mt-50 bg-white text-dark"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                         </form>
                     </div>
-
-
-
-                    <!-- <div class="tab-pane fade" id="nav-events" role="tabpanel" aria-labelledby="nav-events-tab">
-                        <form action="#" method="get">
-                            <select class="custom-select" id="events-destinations">
-                                <option value="0" selected>City Destinations</option>
-                                <option value="Bangkok">Bangkok</option>
-                                <option value="Ayutthaya">Ayutthaya</option>
-                                <option value="SamutPrakan">SamutPrakan</option>
-                                <option value="Nonthaburi">Nonthaburi</option>
-                                <option value="PathumThani">PathumThani</option>
-                            </select>
-                            <select class="custom-select" id="events-catagories">
-                                <option value="ALL" selected>All Catagories</option>
-                                <option value="RESTAURANT">Restaurants</option>
-                                <option value="SHOP">Shopping</option>
-                                <option value="ACCOMMODATION">Hotels</option>
-                            </select> -->
-                    <!-- <select class="custom-select" id="events-price-range">
-                                <option selected>Price Range</option>
-                                <option value="1">$100 - $499</option>
-                                <option value="2">$500 - $999</option>
-                                <option value="3">$1000 - $4999</option>
-                                <option value="3">$5000+</option>
-                            </select>
-                            <select class="custom-select" id="events-proximity">
-                                <option selected>Proximity</option>
-                                <option value="1">Proximity 1</option>
-                                <option value="2">Proximity 2</option>
-                                <option value="3">Proximity 3</option>
-                                <option value="3">Proximity 4</option>
-                                <option value="3">Proximity 5</option> -->
-                    <!-- </select>
-                            <button type="submit" class="btn dorne-btn mt-50 bg-white text-dark"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
-                        </form>
-                    </div> -->
                 </div>
             </div>
 
@@ -302,16 +202,12 @@
                 <div>
                     <div class="single-features-area">
                         <img id="03" onclick=map(lat[0]+lng[0]) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
-                        <!-- Price -->
-                        <!-- <div class="price-start">
-                            <p>FROM 2800-9000 THB</p>
-                        </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
                                 <a id="04">
-                                    <h5 id="01">Lantana Resort</h5>
+                                    <h5 id="01"></h5>
                                 </a>
-                                <p id="02">Bangkok</p>
+                                <p id="02"></p>
                             </div>
                             <div class="feature-favourite">
                                 <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -321,114 +217,70 @@
                 </div>
 
                 <!-- Single Features Area -->
-                <!-- <a id="14" href="/"> -->
                 <div class="single-features-area">
                     <img id="13" onclick=map(lat[1]+lng[1]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
-                            <p>FROM 500-3000 THB</p>
-                        </div> -->
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
                             <a id="14">
-                                <h5 id="11">Krabifrontbay Resort</h5>
+                                <h5 id="11"></h5>
                             </a>
-                            <p id="12">Maehongson</p>
+                            <p id="12"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(1)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
-                <!-- </a> -->
                 <!-- Single Features Area -->
-                <!-- <a id="24" href="/"> -->
                 <div class="single-features-area">
                     <img id="23" onclick=map(lat[2]+lng[2]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
-                            <p>FROM 1000-3000 THB</p>
-                        </div> -->
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
                             <a id="24">
-                                <h5 id="21">Krabifrontbay Resort</h5>
+                                <h5 id="21"></h5>
                             </a>
 
-                            <p id="22">Krabi</p>
+                            <p id="22"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(2)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
-                <!-- </a> -->
                 <!-- Single Features Area -->
-                <!-- <a id="34" href="/"> -->
                 <div class="single-features-area">
                     <img id="33" onclick=map(lat[3]+lng[3]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
-                            <p>FROM 1000-3000 THB</p>
-                        </div> -->
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
 
                             <a id="34">
-                                <h5 id="31">Krabifrontbay Resort</h5>
+                                <h5 id="31"></h5>
                             </a>
 
-                            <p id="32">Krabi</p>
+                            <p id="32"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(3)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
-                <!-- </a> -->
+
                 <!-- Single Features Area -->
-                <!-- <a id="44" href="/"> -->
                 <div class="single-features-area">
                     <img id="43" onclick=map(lat[4]+lng[4]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
-                            <p>FROM 1000-3000 THB</p>
-                        </div> -->
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
                             <a id="44">
-                                <h5 id="41">Krabifrontbay Resort</h5>
+                                <h5 id="41"></h5>
                             </a>
 
-                            <p id="42">Krabi</p>
+                            <p id="42"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(4)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
-                <!-- </a> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="single-listing?type=RESTAURANT&id=P08000887">See more<span class="sr-only">(current)</span></a>
-                </li> -->
-
-                <!-- Single Features Area -->
-                <!-- <div class="single-features-area">
-                    <img src="img/bg-img/feature-4.jpg" alt=""> -->
-                <!-- Price -->
-                <!-- <div class="price-start">
-                        <p>FROM $59/night</p>
-                    </div>
-                    <div class="feature-content d-flex align-items-center justify-content-between">
-                        <div class="feature-title">
-                            <h5>Greece</h5>
-                            <p>Sunny</p>
-                        </div>
-                        <div class="feature-favourite">
-                            <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
         <!-- Explore Map Area -->
@@ -442,14 +294,6 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 d-md-flex align-items-center justify-content-between">
-                    <div class="footer-text">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com
-                               " target="_blank">Colorlib</a> -->
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
                     <div class="footer-social-btns">
                         <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
                         <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
@@ -492,7 +336,7 @@
             readcookie();
             map(latlong);
         });
-        map(lat[0], lat[1], lat[2], lat[3], lat[4], lng[0], lng[1], lng[2], lng[3], lng[4])
+        map(lat[0]+ lng[0])
     </script>
 
 </body>
