--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -62,15 +62,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="listing">Listing</a>
-                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="favorite">Favorite <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="contact">Contact</a>
+                                    <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -160,7 +156,7 @@
     <script src="js/others/plugins.js"></script>
     <!-- Google Maps js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdVg54QthqEizFpV7yGjQCJfHRFP3PnW0"></script>
-    <script src="js/google-map/map-active.js"></script>
+    <script src="js/google-map/contact-map.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
