--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -62,15 +62,12 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="listing">Listing</a>
-                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="favorite">Favorite <span class="sr-only">(current)</span></a>
+                                </li>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact">Contact</a>
+                                    <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -315,16 +312,15 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
-    <!-- Api JS -->
-    <script src="js/api_search.js"></script>
+    <!-- Api Explorer -->
+    <script src="js/api_explorer.js"></script>
     <!-- Google Maps js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdVg54QthqEizFpV7yGjQCJfHRFP3PnW0"></script>
-    <script src="js/google-map/explore-map-active.js"></script>
+    <script src="js/google-map/explore-map.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
-    <!-- favorite -->
-    <script src="js/favorite.js"></script>
-    <script src="js/api_search.js"></script>
+    <!-- Api Favorite -->
+    <script src="js/api_favorite.js"></script>
     <script>
         $(window).on("load", function() {
             setup();
