--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -62,15 +62,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item dropdown active">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="listing">Listing</a>
-                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                    </div>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="favorite">Favorite <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact">Contact</a>
+                                    <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -204,14 +200,14 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
-    <!-- Api Index -->
-    <script src="js/api_index.js"></script>
+    <!-- Api GetFavorite -->
+    <script src="js/api_getfavorite.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
-    <!-- Favorite -->
-    <script src="js/favorite.js"></script>
+    <!-- Api Favorite -->
+    <!-- <script src="js/api_favorite.js"></script> -->
     <script>
-        $(document).ready(readcookie());
+        $(document).ready(displayfavorite());
     </script>
 </body>
 
