--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,15 +61,11 @@
                                 <li class="nav-item ">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="listing">Listing</a>
-                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="favorite">Favorite <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact">Contact</a>
+                                    <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -488,8 +484,6 @@
     <script src="js/others/plugins.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
-    <!-- API index -->
-    <!-- <script src="js/api_index.js"></script> -->
 </body>
 
 </html>
