--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -62,15 +62,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item dropdown active">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="listing">Listing</a>
-                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="favorite">Favorite <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact">Contact</a>
+                                    <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -105,8 +101,8 @@
                     <div class="single-listing-content">
 
                         <div class="listing-title">
-                            <h4 id="place_name">Bicycle Cafe</h4>
-                            <h6 id="district-province">เมืองกาญจนบุรี กาญจนบุรี</h6>
+                            <h4 id="place_name"></h4>
+                            <h6 id="district-province"></h6>
                         </div>
 
                         <div class="single-listing-nav">
@@ -204,7 +200,7 @@
     <script src="js/others/plugins.js"></script>
     <!-- Google Maps js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdVg54QthqEizFpV7yGjQCJfHRFP3PnW0"></script>
-    <script src="js/google-map/location-map-active.js"></script>
+    <script src="js/google-map/single-map.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
     <!-- api_place JS -->
