--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
     <!-- Title -->
     <title >Discover</title>
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
-
     <!-- Core Stylesheet -->
     <link href="style.css" rel="stylesheet">
-
     <!-- Responsive CSS -->
     <link href="css/responsive/responsive.css" rel="stylesheet">
-
 </head>
-
 <body>
     <!-- Preloader -->
     <div id="preloader">
         <div class="dorne-load"></div>
     </div>
-
     <!-- ***** Search Form Area ***** -->
     <div class="dorne-search-form d-flex align-items-center">
         <div class="container">
@@ -43,7 +35,6 @@
             </div>
         </div>
     </div>
-
     <!-- ***** Header Area Start ***** -->
     <header class="header_area" id="header">
         <div class="container-fluid h-100">
@@ -61,11 +52,15 @@
                                 <li class="nav-item ">
                                     <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="favorite">Favorite <span class="sr-only">(current)</span></a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                                        <a class="dropdown-item" href="listing">Listing</a>
+                                        <a class="dropdown-item" href="single-listing">Single Listing</a>
+                                    </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="contact">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -74,8 +69,6 @@
             </div>
         </div>
     </header>
-    <!-- ***** Header Area End ***** -->
-
     <!-- ***** Welcome Area Start ***** -->
     <section class="dorne-welcome-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero-1.jpg);">
         <div class="container h-100">
@@ -85,7 +78,6 @@
                         <h2>Discover</h2>
                         <h4>Find Nearby Place</h4>
                     </div>
-
                     <div class="hero-search-form">
                         <!-- Tabs -->
                         <div class="nav nav-tabs" id="heroTab" role="tablist">
@@ -191,8 +183,6 @@
             </div>
         </div>
     </section>
-    <!-- ***** Welcome Area End ***** -->
-
     <!-- ***** Catagory Area Start ***** -->
     <section class="dorne-catagory-area">
         <div class="container">
@@ -239,8 +229,17 @@
             </div>
         </div>
     </section>
-    <!-- ***** Catagory Area End ***** -->
-
+    <!-- ***** About Area Start ***** -->
+    <section class="dorne-about-area section-padding-0-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="about-content text-center">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- ***** Editor Pick Area Start ***** -->
     <section class="dorne-editors-pick-area bg-img bg-overlay-9 section-padding-100" style="background-image: url(img/bg-img/hero-2.jpg);" id="cities">
         <div class="container">
@@ -289,8 +288,6 @@
             </div>
         </div>
     </section>
-    <!-- ***** Editor Pick Area End ***** -->
-
     <!-- ***** Features Destinations Area Start ***** -->
     <section class="dorne-features-destinations-area" id="hotels">
         <div class="container-fluid">
@@ -309,6 +306,7 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img class="image" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg">
+                            <div class="ratings-map-area d-flex">
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -322,6 +320,8 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img class="image" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg">
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=ACCOMMODATION&id=P02012360"><h5 class="name">เดอะ คันทรี่ไซด์ รีสอร์ท</h5></a>
@@ -334,6 +334,8 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg">
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=RESTAURANT&id=P08013844"><h5>กระบี่ ฟรอนท์ เบย์ รีสอร์ท</h5></a>
@@ -346,6 +348,8 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012357_3.jpg">
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=ACCOMMODATION&id=P02012357"><h5>กริณทร์ รีสอร์ต</h5></a>
@@ -358,6 +362,8 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012342_2.jpg">
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=ACCOMMODATION&id=P02012357"><h5>เคียงจันทร์ รีสอร์ท</h5></a>
@@ -372,8 +378,6 @@
             </div>
         </div>
     </section>
-    <!-- ***** Features Destinations Area End ***** -->
-
     <!-- ***** Features Restaurant Area Start ***** -->
     <section class="dorne-features-restaurant-area bg-default" id="restaurants">
         <div class="container-fluid">
@@ -393,6 +397,9 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg">
+
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=RESTAURANT&id=P08012272"><h5>ทรีทคาเฟ่ แอนด์ แฮงเอ้าท์</h5></a>
@@ -405,6 +412,9 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png">
+
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=RESTAURANT&id=P08013955"><h5>คาเฟ่ จาร์แดง</h5></a>
@@ -417,6 +427,9 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png">
+
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=RESTAURANT&id=P08013989"><h5>เซริว ซูชิ คาเฟ่ ศาลาแดง</h5></a>
@@ -429,6 +442,9 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png">
+
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=RESTAURANT&id=P08013963"><h5>นายน์บ้าน คาเฟ่และขนมไทย</h5></a>
@@ -441,6 +457,9 @@
                         <!-- Single Features Area -->
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg">
+
+                            <div class="ratings-map-area d-flex">
+                            </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
                                     <a href="single-listing?type=RESTAURANT&id=P08013835"><h5>คาเฟ่ จักรยาน</h5></a>
@@ -455,25 +474,6 @@
             </div>
         </div>
     </section>
-
-    <!-- ****** Footer Area Start ****** -->
-    <footer class="dorne-footer-area">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 d-md-flex align-items-center justify-content-between">
-                    <div class="footer-social-btns">
-                        <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
-                        <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
-                        <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- ****** Footer Area End ****** -->
-
     <!-- jQuery-2.2.4 js -->
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
     <!-- Popper js -->
